{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 30,
  "lineage": "4cfe7e2d-a99b-9b3d-f8ca-59e367df32cd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/frontendIPConfigurations/frontend-ip-vmss-demo",
                "load_balancer_rules": [
                  "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-http-vmss-demo",
                  "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-https-vmss-demo"
                ],
                "name": "frontend-ip-vmss-demo",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/publicIPAddresses/public-ip-vmss-demo"
              }
            ],
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "location": "eastasia",
            "name": "lb-vmss-demo",
            "resource_group_name": "2-vmss-demo",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_address_pool_vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Compute/virtualMachineScaleSets/vmss-vmss-demo/virtualMachines/54/networkInterfaces/vmss-nic/ipConfigurations/internal",
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Compute/virtualMachineScaleSets/vmss-vmss-demo/virtualMachines/55/networkInterfaces/vmss-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/backendAddressPools/backend-address-pool-vms-vmss-demo",
            "load_balancing_rules": [
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-https-vmss-demo",
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-http-vmss-demo"
            ],
            "loadbalancer_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "name": "backend-address-pool-vms-vmss-demo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe_health",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/probes/http-probe-health-vmss-demo",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-http-vmss-demo",
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-https-vmss-demo"
            ],
            "loadbalancer_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "name": "http-probe-health-vmss-demo",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "tcp_probe_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/probes/tcp-probe-443-vmss-demo",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "name": "tcp-probe-443-vmss-demo",
            "number_of_probes": 2,
            "port": 443,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "tcp_probe_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/probes/tcp-probe-80-vmss-demo",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "name": "tcp-probe-80-vmss-demo",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/backendAddressPools/backend-address-pool-vms-vmss-demo"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/frontendIPConfigurations/frontend-ip-vmss-demo",
            "frontend_ip_configuration_name": "frontend-ip-vmss-demo",
            "frontend_port": 80,
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-http-vmss-demo",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "name": "lb-rule-http-vmss-demo",
            "probe_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/probes/http-probe-health-vmss-demo",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_address_pool_vmss",
            "azurerm_lb_probe.http_probe_health",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/backendAddressPools/backend-address-pool-vms-vmss-demo"
            ],
            "backend_port": 443,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/frontendIPConfigurations/frontend-ip-vmss-demo",
            "frontend_ip_configuration_name": "frontend-ip-vmss-demo",
            "frontend_port": 443,
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/loadBalancingRules/lb-rule-https-vmss-demo",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo",
            "name": "lb-rule-https-vmss-demo",
            "probe_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/loadBalancers/lb-vmss-demo/probes/http-probe-health-vmss-demo",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_address_pool_vmss",
            "azurerm_lb_probe.http_probe_health",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-vmss-demo",
            "location": "eastasia",
            "name": "nsg-vmss-demo",
            "resource_group_name": "2-vmss-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "nsg-rule-vmss-demo-ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "5566",
                  "80"
                ],
                "direction": "Inbound",
                "name": "nsg-rule-vmss-demo-http-https",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "5566",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-vmss-demo/securityRules/nsg-rule-vmss-demo-http-https",
            "name": "nsg-rule-vmss-demo-http-https",
            "network_security_group_name": "nsg-vmss-demo",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "2-vmss-demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-vmss-demo/securityRules/nsg-rule-vmss-demo-ssh",
            "name": "nsg-rule-vmss-demo-ssh",
            "network_security_group_name": "nsg-vmss-demo",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "2-vmss-demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/publicIPAddresses/public-ip-vmss-demo",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.175.27.47",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "public-ip-vmss-demo",
            "resource_group_name": "2-vmss-demo",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/virtualNetworks/vnet-vmss-demo/subnets/vm-subnet-vmss-demo",
            "name": "vm-subnet-vmss-demo",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "2-vmss-demo",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-vmss-demo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/virtualNetworks/vnet-vmss-demo/subnets/vm-subnet-vmss-demo",
            "network_security_group_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-vmss-demo",
            "subnet_id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/virtualNetworks/vnet-vmss-demo/subnets/vm-subnet-vmss-demo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vm_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f708495b-b1dd-4c3e-85ce-5617f5da68fa",
            "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/virtualNetworks/vnet-vmss-demo",
            "location": "eastasia",
            "name": "vnet-vmss-demo",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "2-vmss-demo",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/virtualNetworks/vnet-vmss-demo/subnets/vm-subnet-vmss-demo",
                "name": "vm-subnet-vmss-demo",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/db45786e-95f0-4c2d-8713-5385062aa342/resourceGroups/2-vmss-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-vmss-demo",
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}